css/style.css
*{
    box-sizing: border-box;
    font-family: sans-serif;
}
body{
    background-color: #343a40;
    margin: auto;
    position: relative;
}
.section-title{
    font-size: 1.5rem;
    color: white;
}
.main-container{
    margin:1%;
}
.flex{
    display: flex;
}
.view-container{
    position: relative;
}
.view{
    flex-wrap: nowrap;
    width: 100%;
    overflow-x: auto;
    overflow-y: hidden;
    -webkit-overflow-scrolling: touch;
    -ms-overflow-style: -ms-autohiding-scrollbar;
    margin-bottom: 20px;
    scroll-behavior: smooth;
    position: relative;
    align-items: center;
    height: 100%;
    min-height: 200px;
}
.error-message{
    width: 100%;
    color: white;
}
.error-message > *{
    margin: 0 10px;
}
.refresh-button{
    transition: .3s;
}
.refresh-button:hover{
    color: black
}

.loading{
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: #343a40;
    background-image: url('/loading.gif');
    background-repeat: no-repeat;
    background-position: center;
    background-size: 50px;
}
.center{
    justify-content: center;
    align-items: center;
}

.cards{
    margin: 10px
}
ul{
    list-style: none;
    padding: 10px;
}
li {
    margin: 5px;
    color: white;
    transition: all .3s ease-in-out;
    text-align: center;
}
li:hover{
    cursor: pointer;
    color: rgb(61, 54, 54);
    transform: scale(1.05);
}

.nav-div{
    position: relative;
    text-align: center;
    color: white
}

.nav-ul{
    position: absolute;
    z-index: 3;
    text-align: center;
    background-color: black;
    flex-direction: column;
    border-radius: 5px;
    top: .5rem;
    left: 6.5rem;
}
.nav{
    margin-top:20px;
}
.genre-header{
    align-items: center;
    color: white;
    position: relative;
}
i{
    margin: 10px;
}

i:hover{
    cursor: pointer;
}

.no-display{
    display: none
}

.search{
    width: 50%;
    height: 2rem;
    border-radius: 10px;
    box-shadow: none;
    color: black;
    border: 1px solid transparent;
    outline: none;
    font-size: 1rem;
    transition: 0.4s ease-in-out;
    padding-left: 10px;
}

.no-trailer-caption{
    color: white;
    height: 40%
}

.cards{
    transition: 0.4s ease-in-out;
}

.cards:hover{
    transform:scale(1.1);
    cursor: pointer;
}

 .modal{
    height: 100%;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    flex-direction: column;
    background:linear-gradient(rgba(5, 1, 1, 0.829), rgba(19, 15, 15, 0.815), rgba(5, 1, 1, 0.815)) ;
    justify-content: center;
    align-items: center;
    z-index: 1000;
}
.modal-inner-container{
    height: 100%;
}
.modal-inner{
    display:flex;
    align-items: center;
    width: 50%;
    height: 100%;
    max-height: 100vh;
    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(24, 20, 20, 0.9), rgba(0, 0, 0, 0.9));
    flex-direction: column;
    border-radius: 10px;
    overflow-y: auto;
    padding-top: 3rem;
    -webkit-overflow-scrolling: touch;
    -ms-overflow-style: -ms-autohiding-scrollbar;
}
.movie-info{
    width: 80%;
    display:flex;
    justify-content: space-between;
    color: white;
    font-size: .8rem;
}

h3{
    margin-bottom: .5rem;
    color: white;
    margin-top: 20px;
}
.movie-info > div{
    width: 45%;
    margin-bottom: 10px;
}
.trailer-container{
    width: 80%;
    min-height: 400px;
}
.trailer-player{
    width: 100%;
    height: 100%;
}

.hidden{
    visibility: hidden;
}
.ratings{
    text-align: center;
}
.button-container{
    width: 80%;
    margin-bottom: 20px;
}
.modal-exit:hover{
    cursor: pointer;
}
.modal-exit{
    color: white;
    background-color: transparent;
    border-radius: 50% ;
    border: none;
}
.modal-similar{
    background-color: #030507;
    width: 100%;
}

button.scroll{
    color:white;
    text-decoration: none;
    font-size: 4em;
    text-align: center;
    z-index: 1;
    max-height: 100%;
    margin: 10px;
    border: 0;
    background:linear-gradient( #343a4070, rgba(95, 93, 93, 0.342),#343a4085);
}
button.scroll:disabled{
    color: grey;
}
button.scroll:active{
    transform: scale(1.05);
}
button.scroll:hover{
    cursor: pointer;
}
button.scroll:disabled:hover{
    cursor: default;
}
.modal .scroll{
    background:linear-gradient(rgba(0, 0, 0, 0.034), rgba(19, 15, 15, 0.411), rgba(44, 36, 36, 0.747),rgba(19, 15, 15, 0.411), rgba(0, 0, 0, 0.034)
    );
}

button:focus{
    border:0;
    outline: none;
    box-shadow: none;
}




/* Scrollbar style */
::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

/* Track */
::-webkit-scrollbar-track {
  background: rgb(82, 80, 80);
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: rgb(32, 31, 31);
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgb(24, 23, 23);
}


@media only screen
  and (min-device-width: 375px)
  and (max-device-width: 1024px)
  and (orientation: portrait)
  and (-webkit-min-device-pixel-ratio: 2) {

    .poster{
        width: 10vw;
        width: 25vw;
    }

    .modal-inner{
        width: 100%;
    }
    .modal-similar{
        padding: 0 1rem;
    }

    .related-container{
        max-height: 25vh;
    }
    .trailer-container{
        min-height: 40vh;
    }
    .movie-info{
        flex-wrap: wrap;
    }
    .movie-info > div{
        width: 100%;
    }
    .release-info > *{
        font-weight: 400;
    }
}

@media only screen
  and (min-device-width: 375px)
  and (max-device-width: 1024px)
  and (-webkit-min-device-pixel-ratio: 2)
  and (orientation: landscape) {

    .poster{
        width: 15vw;
        max-width: 25vw;
    }
    .movie-info{
        flex-wrap: wrap;
    }
    .movie-info > div{
        width: 100%;
    }
    .release-info > *{
        font-weight: 400;
    }
    .trailer-container{
        min-height: 50vh;
    }
}

@media only screen
  and (min-device-width: 375px)
  and (max-device-width: 800px){

    button.scroll{
        display: none;
    }

}

